Fix menu bottom spacing

--- a/css/ibhr-omega.styles.css
+++ b/css/ibhr-omega.styles.css
@@ -220,6 +220,7 @@ body {
   background: linear-gradient(to bottom, #ffffff 0%, #05abe0 100%);
   border: 1px solid #8d793f;
   border-radius: 5px;
+  margin-top: 0.5em;
   margin-bottom: 0.5em;
 }
 #block-superfish-1 #superfish-1-toggle:hover {
