--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -75,6 +75,7 @@
 		background: linear-gradient(to bottom, #ffffff 0%,#05abe0 100%);
 		border: 1px solid #8d793f;
 		border-radius: 5px;
+		margin-top: 0.5em;
 		margin-bottom: 0.5em;
 
 		&:hover {
